--- a/src/main.css
+++ b/src/main.css
@@ -125,6 +125,9 @@ a {
   grid-template-rows: var(--header-height) auto;
   height: 100vh;
   overflow: hidden;
+  @media (min-width: 1024px) {
+    grid-template-columns: auto 336px;
+  }
   @media (max-width: 1023px) {
     grid-template-areas:
       'header'
